2 - Implement user PasswordEncoder password hashing logic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+# Password hashing attributes
+com.todo.app.jwt.password.salt=xTT@wa12Sa/cda4s()
+com.todo.app.jwt.password.iteration=15
+com.todo.app.jwt.password.keyLength=256
+
+
 # Quarkus jwt properties
 quarkus.smallrye-jwt.enabled=true
 mp.jwt.verify.publickey=NONE
