4 - Private/Public Keys generation and application.properties configuration set up

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ com.todo.app.jwt.password.keyLength=256
 
 # Quarkus jwt properties
 quarkus.smallrye-jwt.enabled=true
-mp.jwt.verify.publickey=NONE
+mp.jwt.verify.publickey.location=publicKey.pem
 mp.jwt.verify.issuer=https://todo-app-jwt.com
 
 # Local H2 embedded database jdbc drivers
