--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
   "author": "Juan Sánchez <juanjosesan1995@gmail.com>",
   "private": true,
   "scripts": {
+    "build-prod": "quasar build",
     "lint": "eslint --ext .js,.vue ./",
     "test": "echo \"No test specified\" && exit 0"
   },
