--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -5,13 +5,14 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>com.todo_app_jwt</groupId>
+    <groupId>com.todo.app.jwt</groupId>
     <artifactId>jwt-example</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-  </parent>
+    <version>0.0.1-SNAPSHOT</version>
 
+  </parent>
+  
   <artifactId>backend</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>0.0.1-SNAPSHOT</version>
 
   <properties>
     <surefire-plugin.version>2.22.1</surefire-plugin.version>
